{
  "version": 4,
  "terraform_version": "1.6.6",
  "serial": 287,
  "lineage": "7fbcf477-4086-4f7c-245d-a5986426527b",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "bastion-compute-address",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "34.83.13.252",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2024-01-08T00:40:29.212-08:00",
            "description": "external ip address to tanzu-bastion compute instance",
            "id": "projects/mapbu-partner-apj/regions/us-west1/addresses/tanzu-bastion-ip",
            "name": "tanzu-bastion-ip",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "mapbu-partner-apj",
            "region": "us-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/mapbu-partner-apj/regions/us-west1/addresses/tanzu-bastion-ip"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "cloud-nat-ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "34.83.101.173",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2024-01-08T00:40:29.321-08:00",
            "description": "tanzu cloud nat ip address",
            "id": "projects/mapbu-partner-apj/regions/us-west1/addresses/tanzu-cloud-nat-ip",
            "name": "tanzu-cloud-nat-ip",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "mapbu-partner-apj",
            "region": "us-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/mapbu-partner-apj/regions/us-west1/addresses/tanzu-cloud-nat-ip"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "firewall-default-all",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "all"
              }
            ],
            "creation_timestamp": "2024-01-08T00:41:01.297-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/mapbu-partner-apj/global/firewalls/tanzu-firewall-default-all",
            "log_config": [],
            "name": "tanzu-firewall-default-all",
            "network": "https://www.googleapis.com/compute/v1/projects/mapbu-partner-apj/global/networks/tanzu-vpc",
            "priority": 1000,
            "project": "mapbu-partner-apj",
            "self_link": "https://www.googleapis.com/compute/v1/projects/mapbu-partner-apj/global/firewalls/tanzu-firewall-default-all",
            "source_ranges": [
              "10.65.4.0/24",
              "10.65.5.0/24",
              "10.65.6.0/24"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "firewall-default-icmp",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2024-01-08T00:41:01.216-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/mapbu-partner-apj/global/firewalls/tanzu-firewall-default-icmp",
            "log_config": [],
            "name": "tanzu-firewall-default-icmp",
            "network": "https://www.googleapis.com/compute/v1/projects/mapbu-partner-apj/global/networks/tanzu-vpc",
            "priority": 1000,
            "project": "mapbu-partner-apj",
            "self_link": "https://www.googleapis.com/compute/v1/projects/mapbu-partner-apj/global/firewalls/tanzu-firewall-default-icmp",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "firewall-default-rdp",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "3389"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-01-08T00:41:01.347-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/mapbu-partner-apj/global/firewalls/tanzu-firewall-default-rdp",
            "log_config": [],
            "name": "tanzu-firewall-default-rdp",
            "network": "https://www.googleapis.com/compute/v1/projects/mapbu-partner-apj/global/networks/tanzu-vpc",
            "priority": 1000,
            "project": "mapbu-partner-apj",
            "self_link": "https://www.googleapis.com/compute/v1/projects/mapbu-partner-apj/global/firewalls/tanzu-firewall-default-rdp",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "rdp"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "firewall-default-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-01-08T00:41:01.291-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/mapbu-partner-apj/global/firewalls/tanzu-firewall-default-ssh",
            "log_config": [],
            "name": "tanzu-firewall-default-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/mapbu-partner-apj/global/networks/tanzu-vpc",
            "priority": 1000,
            "project": "mapbu-partner-apj",
            "self_link": "https://www.googleapis.com/compute/v1/projects/mapbu-partner-apj/global/firewalls/tanzu-firewall-default-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "ssh"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "allow_stopping_for_update": true,
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "tanzu-bastion-boot",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2204-jammy-v20231213a",
                    "size": 128,
                    "type": "pd-ssd"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/mapbu-partner-apj/zones/us-west1-b/disks/tanzu-bastion"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Cascade Lake",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "description": "compute instance to tanzu-bastion",
            "desired_status": "RUNNING",
            "enable_display": false,
            "id": "projects/mapbu-partner-apj/zones/us-west1-b/instances/tanzu-bastion",
            "instance_id": "7718647376171633627",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "n2-standard-2",
            "metadata": {
              "ssh-keys": "devops: ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABAQDD7H05c/eqWptyyhtyg29WacBW24L9faNM2MGlYVnwD68f9KD1OUyYVXpQMMCxvCXcRjcoddzR8CCEUpkpWeT1arzX6sioE6HJCDBKYCY5lMB+6JfOCBNRLwXJHmMGbOEdaDASwW2GKHntUDEQR0KM6/MBc+OXvpIs6mhYnHfCXRns/ubYhpZQQwf3kO+llJjnjfokQ96bzZ/hs7juAni04+1Rs5L7qK/gT3BWNrULHs4oPI1FOCEwHS8K0bKc763sPmYlVGiLus48vmNM/u//QoE732m1zZ7nHngFm28WE89b/HphpxhnpMH4JzQ4zmRnRIgefZhz6i0I1s12QOqD",
              "startup-script": "timedatectl set-timezone Asia/Singapore\ntimedatectl set-ntp true\napt update\napt upgrade -y\n"
            },
            "metadata_fingerprint": "lZcbrNfpbzQ=",
            "name": "tanzu-bastion",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.83.13.252",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/mapbu-partner-apj/global/networks/tanzu-vpc",
                "network_ip": "10.65.4.2",
                "nic_type": "GVNIC",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/mapbu-partner-apj/regions/us-west1/subnetworks/tanzu-subnet-public",
                "subnetwork_project": "mapbu-partner-apj"
              }
            ],
            "project": "mapbu-partner-apj",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/mapbu-partner-apj/zones/us-west1-b/instances/tanzu-bastion",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "ssh"
            ],
            "tags_fingerprint": "pfSjJj1RiUg=",
            "zone": "us-west1-b"
          },
          "dependencies": [
            "google_compute_address.bastion-compute-address",
            "google_compute_network.vpc_network",
            "google_compute_subnetwork.public-subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/mapbu-partner-apj/global/networks/tanzu-vpc",
            "mtu": 8896,
            "name": "tanzu-vpc",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "project": "mapbu-partner-apj",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/mapbu-partner-apj/global/networks/tanzu-vpc"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router",
      "name": "cloud-router",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-01-08T00:41:01.419-08:00",
            "description": "tanzu cloud router for internet access",
            "encrypted_interconnect_router": false,
            "id": "projects/mapbu-partner-apj/regions/us-west1/routers/tanzu-cloud-router",
            "name": "tanzu-cloud-router",
            "network": "https://www.googleapis.com/compute/v1/projects/mapbu-partner-apj/global/networks/tanzu-vpc",
            "project": "mapbu-partner-apj",
            "region": "us-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/mapbu-partner-apj/regions/us-west1/routers/tanzu-cloud-router"
          },
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router_nat",
      "name": "cloud-nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_dynamic_port_allocation": false,
            "enable_endpoint_independent_mapping": false,
            "icmp_idle_timeout_sec": 30,
            "id": "mapbu-partner-apj/us-west1/tanzu-cloud-router/tanzu-cloud-nat",
            "log_config": [
              {
                "enable": true,
                "filter": "ERRORS_ONLY"
              }
            ],
            "max_ports_per_vm": 0,
            "min_ports_per_vm": 0,
            "name": "tanzu-cloud-nat",
            "nat_ip_allocate_option": "MANUAL_ONLY",
            "nat_ips": [
              "https://www.googleapis.com/compute/v1/projects/mapbu-partner-apj/regions/us-west1/addresses/tanzu-cloud-nat-ip"
            ],
            "project": "mapbu-partner-apj",
            "router": "tanzu-cloud-router",
            "source_subnetwork_ip_ranges_to_nat": "LIST_OF_SUBNETWORKS",
            "subnetwork": [
              {
                "name": "projects/mapbu-partner-apj/regions/us-west1/subnetworks/tanzu-subnet-private",
                "source_ip_ranges_to_nat": [
                  "PRIMARY_IP_RANGE"
                ]
              },
              {
                "name": "projects/mapbu-partner-apj/regions/us-west1/subnetworks/tanzu-subnet-service",
                "source_ip_ranges_to_nat": [
                  "PRIMARY_IP_RANGE"
                ]
              }
            ],
            "tcp_established_idle_timeout_sec": 1200,
            "tcp_time_wait_timeout_sec": 120,
            "tcp_transitory_idle_timeout_sec": 30,
            "udp_idle_timeout_sec": 30
          },
          "dependencies": [
            "google_compute_address.cloud-nat-ip",
            "google_compute_network.vpc_network",
            "google_compute_router.cloud-router",
            "google_compute_subnetwork.private-subnet",
            "google_compute_subnetwork.service-subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "private-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-01-08T00:41:02.010-08:00",
            "description": "tanzu private subnet",
            "gateway_address": "10.65.5.1",
            "id": "projects/mapbu-partner-apj/regions/us-west1/subnetworks/tanzu-subnet-private",
            "ip_cidr_range": "10.65.5.0/24",
            "name": "tanzu-subnet-private",
            "network": "https://www.googleapis.com/compute/v1/projects/mapbu-partner-apj/global/networks/tanzu-vpc",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "mapbu-partner-apj",
            "purpose": "PRIVATE",
            "region": "us-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/mapbu-partner-apj/regions/us-west1/subnetworks/tanzu-subnet-private",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "public-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-01-08T00:41:01.844-08:00",
            "description": "tanzu public subnet",
            "gateway_address": "10.65.4.1",
            "id": "projects/mapbu-partner-apj/regions/us-west1/subnetworks/tanzu-subnet-public",
            "ip_cidr_range": "10.65.4.0/24",
            "name": "tanzu-subnet-public",
            "network": "https://www.googleapis.com/compute/v1/projects/mapbu-partner-apj/global/networks/tanzu-vpc",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "mapbu-partner-apj",
            "purpose": "PRIVATE",
            "region": "us-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/mapbu-partner-apj/regions/us-west1/subnetworks/tanzu-subnet-public",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "service-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-01-08T00:41:02.521-08:00",
            "description": "tanzu service subnet",
            "gateway_address": "10.65.6.1",
            "id": "projects/mapbu-partner-apj/regions/us-west1/subnetworks/tanzu-subnet-service",
            "ip_cidr_range": "10.65.6.0/24",
            "name": "tanzu-subnet-service",
            "network": "https://www.googleapis.com/compute/v1/projects/mapbu-partner-apj/global/networks/tanzu-vpc",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "mapbu-partner-apj",
            "purpose": "PRIVATE",
            "region": "us-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/mapbu-partner-apj/regions/us-west1/subnetworks/tanzu-subnet-service",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    }
  ]
}